--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,22 +1,22 @@
-DATABASE_URL=YOUR_DATABASE_URL_HERE
-SECRET_KEY=YOUR_SECRET_HERE
-FRONTEND_URL=http://localhost:3000
+# MAIN CONFIGURATION
+DATABASE_URL="YOUR_DATABASE_URL_HERE"
+SECRET_KEY="YOUR_SECRET_HERE"
+FRONTEND_URL="YOUR_FRONTEND_URL_HERE"
+BACKEND_URL="YOUR_BACKEND_URL_HERE"
 
-# OAuth2 Configuration - Google (Not Implemented)
-GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID_HERE
-GOOGLE_CLIENT_SECRET=YOUR_GOOGLE_CLIENT_ID_SECRET_HERE
+# OAUTH AUTHENTICATION
+GOOGLE_CLIENT_ID="YOUR_GOOGLE_CLIENT_ID_HERE"
+GOOGLE_CLIENT_SECRET="YOUR_GOOGLE_CLIENT_ID_SECRET_HERE"
+GITHUB_CLIENT_ID="YOUR_GITHUB_CLIENT_ID_HERE"
+GITHUB_CLIENT_SECRET="YOUR_GITHUB_CLIENT_ID_SECRET_HERE"
 
-# OAuth2 Configuration - GitHub (Not Implemented)
-GITHUB_CLIENT_ID=YOUR_GITHUB_CLIENT_ID_HERE
-GITHUB_CLIENT_SECRET=YOUR_GITHUB_CLIENT_ID_SECRET_HERE
+# AI CONFIGURATION
+OLLAMA_URL="URL"
+USE_LONG_PROMPT="TRUE"
+OLLAMA_MODEL="YOUR_OLLAMA_MODEL_HERE"
+EMBEDDING_MODEL_NAME="YOUR_EMBEDDING_MODEL_NAME_HERE"
 
-# AI
-OLLAMA_URL=URL
-USE_LONG_PROMPT=TRUE
-OLLAMA_MODEL=qwen2.5:3b-instruct
-EMBEDDING_MODEL_NAME=sentence-transformers/all-MiniLM-L6-v2
-
-# Tunnel
-AI_TUNNEL_URL=https://3775e9493c9d.ngrok-free.app/grade
-AI_MODEL=qwen2.5:3b-instruct
-AI_TIMEOUT=120
+# TUNNEL AND AI SETTINGS
+AI_TUNNEL_URL="YOUR_TUNNEL_URL_HERE"
+AI_MODEL="YOUR_AI_MODEL_HERE"
+AI_TIMEOUT="YOUR_TIMEOUT_TIMENUMBER_HERE"
