--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,8 +1,8 @@
-# NextAuth Configuration
-NEXTAUTH_SECRET=YOUR_AUTH_SECRET_HERE
+# NEXTAUTH CONFIG
+NEXTAUTH_SECRET="YOUR_AUTH_SECRET_HERE"
 
-# Backend API URL
-NEXT_PUBLIC_API_URL=http://localhost:8000
+# BACKEND API URL
+NEXT_PUBLIC_API_URL="YOUR_PUBLIC_API_URL_HERE"
 
-# Frontend URL (for OAuth callbacks, etc)
-NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
+# FRONTEND URL
+NEXT_PUBLIC_FRONTEND_URL="YOUR_PUBLIC_FRONTEND_URL_HERE"
